--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ config.*
 configure
 data/appdata/*.appdata.xml
 data/*.desktop
-data/*.gresource
 data/*.gschema.valid
 data/*.gschema.xml
 data/*.service
@@ -37,5 +36,6 @@ po/POTFILES
 po/Rules-quot
 po/polari.pot
 po/stamp-it
+src/*.gresource
 src/config.js
 src/polari
